test/error/fuzzy_match.result
Error: cannot find field or method "push_back" in "vec_push"
  --> test/error/fuzzy_match.colgm:12:12
   | 
12 |         vp.push_back();
   |            ^^^^^^^^^
  note: maybe you mean "push"?
  --> test/error/fuzzy_match.colgm:7:9
  | 
7 |     pub func push(self) {
  |         ^^^^^^^^^^^^^^^^^^
8 |         // do something
  | ^^^^^^^^^^^^^^^^^^^^^^^
9 |     }
  | ^^^^^ 
 note: defined here

Error: cannot find field or method "push" in "vec_push_back"
  --> test/error/fuzzy_match.colgm:27:13
   | 
27 |         vpb.push();
   |             ^^^^
  note: maybe you mean "push_back"?
  --> test/error/fuzzy_match.colgm:24:9
   | 
24 |     pub func push_back(self) {}
   |         ^^^^^^^^^^^^^^^^^^^^^^^
  note: defined here

Error: cannot find field "p" in "vec_push"
  --> test/error/fuzzy_match.colgm:43:31
   | 
43 |     var vp_wrong = vec_push { p: 0 };
   |                               ^^^^

Error: cannot find field "p" in "vec_push_back"
  --> test/error/fuzzy_match.colgm:44:37
   | 
44 |     var vpb_wrong = vec_push_back { p: 0 };
   |                                     ^^^^

Error: cannot find member "pu" in "tagged_union_push"
  --> test/error/fuzzy_match.colgm:47:41
   | 
47 |     var tup_wrong = tagged_union_push { pu: 0 };
   |                                         ^^^^^

Error: cannot find field or method "push_back" in "tagged_union_push"
  --> test/error/fuzzy_match.colgm:48:9
   | 
48 |     tup.push_back;
   |         ^^^^^^^^^
  note: maybe you mean "push"?
  --> test/error/fuzzy_match.colgm:32:5
   | 
32 |     push: i64
   |     ^^^^^^^^^
  note: defined here

Error: cannot find member "pushb" in "tagged_union_push_back"
  --> test/error/fuzzy_match.colgm:51:47
   | 
51 |     var tupb_wrong = tagged_union_push_back { pushb: 0 };
   |                                               ^^^^^^^^

Error: cannot find field or method "push" in "tagged_union_push_back"
  --> test/error/fuzzy_match.colgm:52:10
   | 
52 |     tupb.push;
   |          ^^^^
  note: maybe you mean "push_back"?
  --> test/error/fuzzy_match.colgm:36:5
   | 
36 |     push_back: i64
   |     ^^^^^^^^^^^^^^
  note: defined here

Warning: unused variable "vp_wrong"
  --> test/error/fuzzy_match.colgm:43:5
   | 
43 |     var vp_wrong = vec_push { p: 0 };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Warning: unused variable "vpb_wrong"
  --> test/error/fuzzy_match.colgm:44:5
   | 
44 |     var vpb_wrong = vec_push_back { p: 0 };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Warning: unused variable "tup_wrong"
  --> test/error/fuzzy_match.colgm:47:5
   | 
47 |     var tup_wrong = tagged_union_push { pu: 0 };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Warning: unused variable "tupb_wrong"
  --> test/error/fuzzy_match.colgm:51:5
   | 
51 |     var tupb_wrong = tagged_union_push_back { pushb: 0 };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^